# Visual-Identity-CMake-

./: CMakeLists.txt  README.md
MyLib/: CMakeLists.txt  count.cpp  count.h  limit.cpp  limit.h  local.h
src/: CMakeLists.txt  main.cpp
